--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.5.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/jsdom": "^21.1.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "init": "^0.1.2",
+    "jsdom": "^24.1.0",
+    "next": "14.2.4",
+    "npx": "^10.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "together-ai": "0.6.0-alpha.3",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "@types/tailwindcss": "^3.1.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5"
   }
 }
