--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/tailwindcss": "^3.1.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
