--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/community": "^0.2.12",
+    "@langchain/core": "^0.2.9",
+    "@langchain/openai": "^0.2.0",
     "@mozilla/readability": "^0.5.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -17,8 +20,14 @@
     "@types/jsdom": "^21.1.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "duck-duck-scrape": "^2.2.5",
+    "framer-motion": "^11.2.11",
+    "html-to-text": "^9.0.5",
     "init": "^0.1.2",
     "jsdom": "^24.1.0",
+    "langchain": "^0.2.5",
+    "messages": "link:@langchain/core/messages",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "npx": "^10.2.2",
     "react": "^18",
@@ -27,7 +36,8 @@
     "tailwindcss-animate": "^1.0.7",
     "together-ai": "0.6.0-alpha.3",
     "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.1"
+    "zod-to-json-schema": "^3.23.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -36,6 +46,7 @@
     "@types/tailwindcss": "^3.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "prettier": "3.3.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
