--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@langchain/community": "^0.2.12",
     "@langchain/core": "^0.2.9",
     "@langchain/openai": "^0.2.0",
+    "@monaco-editor/react": "^4.6.0",
     "@mozilla/readability": "^0.5.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -30,8 +31,9 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "npx": "^10.2.2",
-    "react": "^18",
+    "react": "link:@types/monaco-editor/react",
     "react-dom": "^18",
+    "react-live": "^4.1.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "together-ai": "0.6.0-alpha.3",
