--- a/backend/orchestator/package.json
+++ b/backend/orchestator/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "build": "tsc -b",
     "start": "node dist/index.js",
-    "dev": "nodemon --watch index.ts"
+    "dev": "nodemon index.ts"
+
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
