--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.32.0",
     "duck-duck-scrape": "^2.2.5",
     "framer-motion": "^11.2.11",
     "html-to-text": "^9.0.5",
@@ -32,6 +34,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "npx": "^10.2.2",
+    "postgres": "^3.4.4",
     "react": "link:@types/monaco-editor/react",
     "react-dom": "^18",
     "react-live": "^4.1.6",
@@ -52,6 +55,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/tailwindcss": "^3.1.0",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "prettier": "3.3.2",
