--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -32,6 +33,7 @@
     "init": "^0.1.2",
     "jsdom": "^24.1.0",
     "langchain": "^0.2.5",
+    "lucide-react": "^0.414.0",
     "messages": "link:@langchain/core/messages",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
