--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,33 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preinstall": "typesync || :"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.37",
-    "@langchain/community": "^0.2.12",
-    "@langchain/core": "^0.2.9",
-    "@langchain/openai": "^0.2.0",
-    "@monaco-editor/react": "^4.6.0",
-    "@mozilla/readability": "^0.5.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@types/jsdom": "^21.1.7",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^3.2.32",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
-    "duck-duck-scrape": "^2.2.5",
     "framer-motion": "^11.2.11",
-    "html-to-text": "^9.0.5",
     "init": "^0.1.2",
-    "jsdom": "^24.1.0",
-    "langchain": "^0.2.5",
     "lucide-react": "^0.414.0",
     "messages": "link:@langchain/core/messages",
     "mini-svg-data-uri": "^1.4.4",
@@ -55,6 +46,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/eslint": "~9.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
