--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,11 +42,13 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "together-ai": "0.6.0-alpha.3",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@iconify/react": "^5.0.2",
     "@tailwindcss/typography": "^0.5.13",
     "@types/eslint": "~9.6.0",
     "@types/node": "^20",
