--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.623.0",
     "@aws-sdk/s3-request-presigner": "^3.623.0",
     "@clerk/elements": "^0.10.7",
+    "@google/generative-ai": "^0.17.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
@@ -25,6 +26,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
     "framer-motion": "^11.2.11",
+    "generative-ai": "link:@types/google/generative-ai",
     "init": "^0.1.2",
     "lucide-react": "^0.414.0",
     "messages": "link:@langchain/core/messages",
