--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
     "@ai-sdk/openai": "^0.0.37",
     "@aws-sdk/client-s3": "^3.623.0",
     "@aws-sdk/s3-request-presigner": "^3.623.0",
-    "@clerk/elements": "^0.10.7",
+    "@clerk/nextjs": "^5.6.0",
     "@google/generative-ai": "^0.17.1",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@neondatabase/serverless": "^0.9.5",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -25,14 +23,8 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
-    "framer-motion": "^11.2.11",
-    "generative-ai": "link:@types/google/generative-ai",
-    "init": "^0.1.2",
     "lucide-react": "^0.414.0",
-    "messages": "link:@langchain/core/messages",
-    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
-    "npx": "^10.2.2",
     "postgres": "^3.4.4",
     "react": "link:@types/monaco-editor/react",
     "react-dom": "^18",
@@ -44,15 +36,10 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "together-ai": "0.6.0-alpha.3",
-    "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.1",
-    "zustand": "^4.5.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@iconify/react": "^5.0.2",
     "@tailwindcss/typography": "^0.5.13",
-    "@types/eslint": "~9.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -60,9 +47,7 @@
     "drizzle-kit": "^0.23.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "prettier": "3.3.2",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5",
-    "wrangler": "^3.69.0"
+    "typescript": "^5"
   }
 }
