--- a/package.json
+++ b/package.json
@@ -46,22 +46,20 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
-    "katex": "^0.16.19",
     "lucide-react": "^0.469.0",
-    "mathjax": "3",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-markdown": "^8.0.6",
+    "react-markdown": "^9.0.3",
     "react-resizable-panels": "^2.1.7",
+    "react-router": "^7.1.3",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.0",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.0",
-    "remark-math": "^6.0.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
