--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "idb": "^8.0.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
