--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.7.1",
+    "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "together-ai": "^0.11.1",
