--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "sonner": "^1.7.1",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "together-ai": "^0.11.1",
     "vaul": "^1.1.2",
@@ -80,6 +81,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "postcss": "^8",
+    "tailwind-scrollbar": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
