--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
     "@xyflow/react": "^12.3.6",
+    "better-react-mathjax": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -57,12 +58,15 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
+    "react-mathjax": "^1.0.1",
     "react-resizable-panels": "^2.1.7",
     "react-router": "^7.1.3",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.0",
     "rehype-katex": "^7.0.1",
+    "rehype-mathjax": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "sonner": "^1.7.1",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
