--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@ai-sdk/cerebras": "^0.2.13",
+    "@ai-sdk/openai": "^1.3.12",
+    "@ai-sdk/react": "^1.2.9",
+    "@ai-sdk/togetherai": "^0.2.13",
     "@hookform/resolvers": "^3.10.0",
+    "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -41,6 +47,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
     "@xyflow/react": "^12.3.6",
+    "ai": "^4.3.7",
     "better-react-mathjax": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,6 +56,7 @@
     "embla-carousel-react": "^8.5.2",
     "idb": "^8.0.1",
     "input-otp": "^1.4.2",
+    "katex": "0.16.9",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
@@ -58,15 +66,14 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
-    "react-mathjax": "^1.0.1",
     "react-resizable-panels": "^2.1.7",
     "react-router": "^7.1.3",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.0",
     "rehype-katex": "^7.0.1",
-    "rehype-mathjax": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "sambanova-ai-provider": "^1.1.1",
     "sonner": "^1.7.1",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
