--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
+    "drizzle-seed": "^0.3.1",
     "embla-carousel-react": "^8.5.2",
     "idb": "^8.0.1",
     "input-otp": "^1.4.2",
@@ -61,6 +64,8 @@
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "openai": "^4.79.1",
+    "pg": "^8.15.6",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
@@ -87,8 +92,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/pg": "^8.11.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "postcss": "^8",
