--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/openai": "^1.3.12",
     "@ai-sdk/react": "^1.2.9",
     "@ai-sdk/togetherai": "^0.2.13",
+    "@clerk/nextjs": "^6.18.5",
     "@hookform/resolvers": "^3.10.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-accordion": "^1.2.2",
