--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/openai": "^1.3.12",
     "@ai-sdk/react": "^1.2.9",
     "@ai-sdk/togetherai": "^0.2.13",
+    "@clerk/clerk-react": "^5.30.4",
     "@clerk/nextjs": "^6.18.5",
     "@hookform/resolvers": "^3.10.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
@@ -44,6 +45,9 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/query-sync-storage-persister": "^5.75.0",
+    "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-query-persist-client": "^5.75.2",
     "@types/react-mathjax": "^1.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
@@ -77,11 +81,10 @@
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.0",
     "rehype-katex": "^7.0.1",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "sambanova-ai-provider": "^1.1.1",
     "sonner": "^1.7.1",
-    "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
@@ -92,6 +95,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/node": "^20",
     "@types/pg": "^8.11.14",
     "@types/react": "^19",
