--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@ai-sdk/togetherai": "^0.2.13",
     "@clerk/clerk-react": "^5.30.4",
     "@clerk/nextjs": "^6.18.5",
-    "@hookform/resolvers": "^3.10.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -48,10 +47,8 @@
     "@tanstack/query-sync-storage-persister": "^5.75.0",
     "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-query-persist-client": "^5.75.2",
-    "@types/react-mathjax": "^1.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
-    "@xyflow/react": "^12.3.6",
     "ai": "^4.3.7",
     "better-react-mathjax": "^2.1.0",
     "class-variance-authority": "^0.7.1",
@@ -62,7 +59,6 @@
     "drizzle-orm": "^0.43.1",
     "drizzle-seed": "^0.3.1",
     "embla-carousel-react": "^8.5.2",
-    "idb": "^8.0.1",
     "input-otp": "^1.4.2",
     "katex": "0.16.9",
     "lucide-react": "^0.469.0",
@@ -77,7 +73,6 @@
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
     "react-resizable-panels": "^2.1.7",
-    "react-router": "^7.1.3",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.0",
     "rehype-katex": "^7.0.1",
@@ -88,15 +83,13 @@
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "together-ai": "^0.11.1",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1",
-    "zustand": "^5.0.3"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tanstack/eslint-plugin-query": "^5.74.7",
-    "@types/node": "^20",
+    "@types/node": "22.15.17",
     "@types/pg": "^8.11.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
