--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/openai": "^1.3.12",
     "@ai-sdk/react": "^1.2.9",
     "@ai-sdk/togetherai": "^0.2.13",
+    "@aws-sdk/client-s3": "^3.808.0",
     "@clerk/clerk-react": "^5.30.4",
     "@clerk/nextjs": "^6.18.5",
     "@openrouter/ai-sdk-provider": "^0.4.5",
@@ -73,6 +74,7 @@
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
     "react-resizable-panels": "^2.1.7",
+    "react-router": "^7.6.0",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.0",
     "rehype-katex": "^7.0.1",
